# elx

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yaml  test.yaml
elx/: __init__.py  catalog.py  cli.py  dagster.py  exceptions.py  json_temp_file.py  record_counter.py  runner.py  singer.py  state.py  tap.py  target.py  utils.py
elx/cli/: app.py  catalog.py  debug.py  install.py  invoke.py  utils.py
elx/extensions/dagster/: __init__.py  assets.py  utils.py
examples/dagster-elx-with-dbt/: README.md  pyproject.toml
examples/dagster-elx-with-dbt/dbt/: .user.yml  dbt_project.yml  profiles.yml
examples/dagster-elx-with-dbt/dbt/models/: animal_count.sql  sources.yml
examples/dagster-elx-with-dbt/dbt/models/staging/: animal_count.sql
examples/dagster-elx-with-dbt/pipeline/: __init__.py
tests/: conftest.py  project.py  test.csv
tests/fixtures/: runner.py  singer.py  state.py  tap.py  target.py
tests/test_elx/: test_catalog.py  test_runner.py  test_singer.py  test_state.py  test_tap.py  test_utils.py
tests/test_elx/test_extensions/test_dagster/: test_assets.py
