[tool.poetry]
name = "elx"
version = "0.1.0"
description = "A lightweight Python interface for extracting and loading using the Singer.io spec."
authors = ["Jules Huisman <jules.huisman@quantile.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pipx = "^1.2.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
