[tool.poetry]
name = "elx"
version = "0.1.0"
description = "A lightweight Python interface for extracting and loading using the Singer.io spec."
authors = ["Jules Huisman <jules.huisman@quantile.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pipx = "^1.2.0"
smart-open = {version = "^6.3.0"}
python-dotenv = "^1.0.0"
pydantic = "1.10.11"
azure-storage-blob = {version = "^12.0.0", optional = true}
azure-common = {version = "^1.0.0", optional = true}
azure-core = {version = "^1.0.0", optional = true}
boto3 = {version = "^1.0.0", optional = true}
google-cloud-storage = {version = "^2.6.0", optional = true}
requests = {version = "^2.0.0", optional = true}
paramiko = {version = "^2.0.0", optional = true}
dagster = {version = "^1.5.6", optional = true}
dagster-webserver = {version = "^1.5.6", optional = true}
typer = {extras = ["all"], version = "^0.9.0"}
inquirer = "^3.1.3"

[tool.poetry.extras]
azure = ["azure-storage-blob", "azure-common", "azure-core"]
aws = ["boto3"]
gcs = ["google-cloud-storage"]
http = ["requests"]
ssh = ["paramiko"]
dagster = ["dagster", "dagster-webserver"]
all = ["azure-storage-blob", "azure-common", "azure-core", "boto3", "google-cloud-storage", "requests", "paramiko", "dagster"]

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.4.0"
isort = "^5.12.0"
dagit = "^1.3.13"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
elx = 'elx.cli:main'
