[tool.poetry]
name = "dagster-elx-with-dbt"
version = "0.1.0"
description = ""
authors = ["Jules Huisman <jules.huisman@quantile.nl>"]
readme = "README.md"
packages = [{include = "pipeline"}]

[tool.poetry.dependencies]
python = "^3.10"
dagster = "^1.3.14"
dagster-dbt = "^0.19.14"
dbt-duckdb = "^1.5.2"
pyarrow = "^12.0.1"
dagster-webserver = "^1.3.14"
dagster-duckdb-pandas = "^0.19.14"
elx = { path = "../..", develop = true }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
